--- a/src/main/resources/static/robots.html
+++ b/src/main/resources/static/robots.html
@@ -118,6 +118,7 @@
         <label>Name:</label><br>
         <input type="text" id="robotName" value="New robot name"><br>
 
+        <label>Speed:</label><br>
         <input type="radio" id="fast" name="robotSpeed" value="FAST">
         <label for="fast">Fast</label><br>
         <input type="radio" id="normal" name="robotSpeed" value="NORMAL" checked="checked">
